Added simple sql & mongo wrapper

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ password-strength
 databases[postgresql]
 databases[mysql]
 databases[sqlite]
-SQLAlchemy
+sqlalchemy==1.3.20
 motor
 email-validator
 aiosmtplib
