--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -33,3 +33,21 @@ jobs:
         run: npm install pyright -g
       - name: Run pyright
         run: pyright aioaccount/*
+      - name: MySQL server
+        uses: mirromutth/mysql-action@v1.1
+        with:
+          mysql database: ${{ secrets.DATABASE_DB }}
+          mysql user: ${{ secrets.DATABASE_USER }}
+          mysql password: ${{ secrets.DATABASE_PASS }}
+          host port: 3800
+          container port: 3800
+      - name: Dummy SMTP server
+        uses: upgundecha/start-sendria-github-action@v1.0.0
+        with:
+          smtp-port: 1025
+      - name: MongoDB server
+        uses: supercharge/mongodb-github-action@1.6.0
+        with:
+          mongodb-version: ['4.0', '4.2', '4.4']
+      - name: Run unit tests
+        run: python run_tests.py --smtp_hostname localhost --smtp_port 1025 --smtp_email test@example.com --mongo_server localhost --mongo_port 27017 --sql_username ${{ secrets.DATABASE_USER }} --sql_password ${{ secrets.DATABASE_PASS }} --sql_server 127.0.0.1 --sql_port 3800 --sql_database ${{ secrets.DATABASE_DB }}
